
/*
 * *
 *  * Created by RESTBUSTERS on 7/1/20
 *  * Copyright RESTBUSTERS (c) 2021 . All rights reserved.
 *  * Last modified 6/5/21 6:50 PM
 *
 */

plugins {
    // Apply the java-library plugin to add support for Java Library
    id 'java-library'
    id 'idea'
    id "com.adarshr.test-logger" version "4.0.0"
    id 'signing'
    id 'maven-publish'
    id 'io.codearte.nexus-staging' version '0.30.0'
    id "io.freefair.lombok" version "8.13.1"
}

repositories {
    mavenCentral()
    maven { url "https://m2proxy.atlassian.com/repository/public" }
    maven { url "https://packages.atlassian.com/mvn/maven-atlassian-external/" }
}


compileJava {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

group = 'com.restbusters'
description = 'Quality, Release and Automation support'

version = '0.1.2'


dependencies {
    api 'com.squareup.okhttp3:okhttp:5.0.0-alpha.14'
    api "org.seleniumhq.selenium:selenium-java:4.15.0"
    implementation 'io.github.bonigarcia:webdrivermanager:5.6.2'
    implementation("io.github.bonigarcia:webdrivermanager:6.3.2")
    implementation 'com.squareup.okhttp3:mockwebserver:5.0.0-alpha.14'
    implementation 'org.slf4j:slf4j-api:2.0.17'
    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.5.18'
    implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.5.18'
    implementation group: 'org.aeonbits.owner', name: 'owner', version: '1.0.12'
    implementation group: 'org.apache.commons', name: 'commons-exec', version: '1.5.0'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.18'

    //json/models
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.19.0'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.19.0'
    implementation group: 'com.jayway.jsonpath', name: 'json-path', version: '2.9.0'
    implementation group: 'net.minidev', name: 'json-smart', version: '2.5.2'

    //jira
    api 'io.atlassian.fugue:fugue:6.1.2'
    api 'com.atlassian.jira:jira-rest-java-client-core:5.2.7'
    api 'com.atlassian.jira:jira-rest-java-client-api:5.2.6'

    implementation group: 'org.freemarker', name: 'freemarker', version: '2.3.34'

    //apache
    implementation group: 'org.apache.commons', name: 'commons-text', version: '1.14.0'
    implementation group: 'commons-io', name: 'commons-io', version: '2.20.0'
    implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.5.0'

    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
    implementation ('com.google.guava:guava:33.4.8-jre')

    //swagger
    //implementation group: 'io.swagger', name: 'swagger-core', version: '2.2.30'
    //implementation group: 'io.swagger', name: 'swagger-parser', version: '2.0.0-rc1'
    //openapi
    implementation group: 'io.swagger.core.v3', name: 'swagger-core', version: '2.2.30'
    implementation group: 'io.swagger.core.v3', name: 'swagger-models', version: '2.2.30'
    implementation group: 'io.swagger.parser.v3', name: 'swagger-parser-v3', version: '2.1.26'

    //for creating request body
    implementation group: 'io.swagger', name: 'swagger-inflector', version: '2.0.12'

    //lombok
    implementation group: 'org.projectlombok', name: 'lombok', version: '1.18.38'

    //templates
    //implementation group: 'org.freemarker', name: 'freemarker', version: '2.3.34'
    //implementation group: 'org.jtwig', name: 'jtwig-json-extension', version: '5.86.1.RELEASE'

    //mocking
    implementation group: 'org.wiremock', name: 'wiremock-standalone', version: '3.13.1'

    //needed for data provider
    implementation group: 'org.testng', name: 'testng', version: '7.11.0'

    // Use TestNG framework, also requires calling test.useTestNG() below
    testImplementation group: 'org.testng', name: 'testng', version: '7.11.0'

    // Needed for testing restClient, mocking ability.
    testImplementation 'com.squareup.okhttp3:mockwebserver:5.0.0-alpha.14'
}

configurations {
    childJars
}

dependencies {
    subprojects.each {
        childJars project(it.path)
    }
}

jar {
    dependsOn configurations.childJars
    from { configurations.childJars.collect { zipTree(it) } }
    exclude "META-INF/*.SF"
    exclude "META-INF/*.DSA"
    exclude "META-INF/*.RSA"
}

task sourcesJar(type: Jar, dependsOn: classes) {
    archiveClassifier = 'sources'
    from sourceSets.main.allSource
}
task javadocJar(type: Jar, dependsOn: javadoc) {
    archiveClassifier = 'javadoc'
    from javadoc.destinationDir
}

if (JavaVersion.current().isJava8Compatible()) {
    allprojects {
        tasks.withType(Javadoc) {
            options.addStringOption('Xdoclint:none', '-quiet')
        }
    }
}


test {
    // Use TestNG for unit tests
    useTestNG()
    testLogging {
        events "passed", "skipped", "failed", "standardOut", "standardError"
    }
}

ext.admin = hasProperty('sonatypeUsername')

artifacts {
    archives jar
    archives sourcesJar
    archives javadocJar
}

signing {
    required { false }
    sign publishing.publications
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            customizePom(pom, rootProject)

            artifact sourcesJar
            artifact javadocJar
        }
    }
    repositories {
        maven {
            url "https://oss.sonatype.org/service/local/staging/deploy/maven2"
            if (admin) {
                credentials {
                    username sonatypeUsername
                    password sonatypePassword
                }
            }
        }
    }
}

model {
    tasks.publish {
        dependsOn(project.tasks.build)
    }
    tasks.install {
        dependsOn(project.tasks.build)
    }
}

def customizePom(pom, gradleProject) {
    pom.withXml {
        def root = asNode()
        // modify POM and add optional flag where needed
        root.dependencies.'*'.findAll {

            ext.artifactId = it.artifactId.text()
            ext.fulldep = it.groupId.text() + ':' + it.artifactId.text() + ':' + it.version.text()
        }

        // add all items necessary for maven central publication
        root.children().last() + {
            println("Name:" + gradleProject.name)
            description gradleProject.description// moduleDescription
            resolveStrategy = Closure.DELEGATE_FIRST

            name 'Repo Qreasp'
            description gradleProject.description
            url 'https://github.com/restbusters/qreasp'
            organization {
                name 'Restbusters'
                url 'https://restbusters.com'
            }
            issueManagement {
                system 'GitHub'
                url 'https://github.com/restbusters/qreasp/issues'
            }
            licenses {
                license {
                    name 'The Apache Software License, Version 2.0'
                    url 'https://github.com/restbusters/qreasp/blob/master/LICENSE'
                    distribution 'repo'
                }
            }
            scm {
                url 'https://github.com/restbusters/qreasp'
                connection 'scm:git:git://github.com/restbusters/qreasp.git'
                developerConnection 'scm:git:ssh://git@github.com/restbusters/qreasp.git'
            }
            developers {
                developer {
                    id 'ed'
                    name 'Ed Vayn'
                    email 'restbusterstech@gmail.com'
                    timezone '+1'
                }
                developer {
                    id 'Alex'
                    name 'Alexander Matsaylo'
                    email 'restbusterstech@gmail.com'
                    timezone '+1'
                }
            }
        }
    }
}

testlogger {
    theme 'mocha' // project level
    slowThreshold 5000
}

task install(dependsOn: publishToMavenLocal) {
    group = 'Publishing'
    description = 'Installs artifacts to local Maven repository'
}

//
// RELEASE
//

task release() {
    group 'Project'
    description 'Builds everything for the release.'

    dependsOn build
    dependsOn javadoc
    //dependsOn jacocoTestReport
}
